--- a/projet.html
+++ b/projet.html
@@ -28,7 +28,7 @@
 	    <li><a href="epreuve_oral.html" class="btn-CV">Epreuve Orale E5</a></li>
             <li><a href="veille_technologique.html" class="btn-CV">Veille Technologique</a></li>
             <li><a href="projet.html" class="btn-CV">Mes Projet</a></li>            
-	    <li><a href="CV.html" class="btn-CV">Mon CV Numérique</a></li>
+	    	<li><a href="cv.html" class="btn-CV">Mon CV Numérique</a></li>
         </ol>
     </div>
 </nav>
@@ -54,6 +54,7 @@
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Mes Projets</span></b></titel>
 <h2><b>Mes Projets</b></h2>
 <br/><br/>
+<h3> Prrojet passé </h3>
 <section id="cv">
     <div class="texte">
 	<h4><b>Construction d'un Cabanon de Jardin :</b> 
@@ -80,7 +81,7 @@
 
 <section id="cv">
     <div class="texte">
-	<h4><b>Boot d'O.S. sur plusieurs machines :</b> 
+	<h4><b>Boot d'O.S. sur plusieurs ordinateurs :</b> 
 	<br/><img src=".png" style="width: 15px; height: 15px;"></h4>
 	<p>
 		<br/>
@@ -92,7 +93,7 @@
 
 <section id="cv">
     <div class="texte">
-	<h4><b>Maintenance d'une machine :</b> 
+	<h4><b>Maintenance d'un ordinateur :</b> 
 	<br/><img src=".png" style="width: 15px; height: 15px;"></h4>
 	<p>
 		<br/>
@@ -101,7 +102,19 @@
 		<br/>
 	</p>
 </section>
-
+<h3> Projet en cours </h3>
+<section id="cv">
+    <div class="texte">
+	<h4><b>Démontage d'un vieux PC dans l but de le transformer en serveur :</b> 
+	<br/><img src=".png" style="width: 15px; height: 15px;"></h4>
+	<p>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+	</p>
+</section>
+	
 <footer>
 <br/>
   <section>
@@ -119,4 +132,5 @@
   <script src="script_1.js"></script>
 
 </footer>
+
 </html>
