--- a/veille_technologique.html
+++ b/veille_technologique.html
@@ -28,7 +28,7 @@
 	    <li><a href="epreuve_oral.html" class="btn-CV">Epreuve Orale E5</a></li>
             <li><a href="veille_technologique.html" class="btn-CV">Veille Technologique</a></li>
             <li><a href="projet.html" class="btn-CV">Mes Projet</a></li>            
-	    <li><a href="CV.html" class="btn-CV">Mon CV Numérique</a></li>
+	    	<li><a href="cv.html" class="btn-CV">Mon CV Numérique</a></li>
         </ol>
     </div>
 </nav>
@@ -89,4 +89,5 @@
 
 </footer>
 </body>
+
 </html>
