--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -27,7 +27,7 @@
 	    <li><a href="epreuve_oral.html" class="btn-CV">Epreuve Orale E5</a></li>
             <li><a href="veille_technologique.html" class="btn-CV">Veille Technologique</a></li>
             <li><a href="projet.html" class="btn-CV">Mes Projet</a></li>            
-	    <li><a href="CV.html" class="btn-CV">Mon CV Numérique</a></li>
+	    	<li><a href="cv.html" class="btn-CV">Mon CV Numérique</a></li>
         </ol>
     </div>
 </nav>
@@ -84,4 +84,5 @@
 
 </body>
 </footer>
+
 </html>
