--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	    <li><a href="epreuve_oral.html" class="btn-CV">Epreuve Orale E5</a></li>
             <li><a href="veille_technologique.html" class="btn-CV">Veille Technologique</a></li>
             <li><a href="projet.html" class="btn-CV">Mes Projet</a></li>            
-	    <li><a href="CV.html" class="btn-CV">Mon CV Numérique</a></li>
+	    	<li><a href="cv.html" class="btn-CV">Mon CV Numérique</a></li>
         </ol>
     </div>
 </nav>
@@ -149,4 +149,5 @@
   <script src="java.js"></script>
   <script src="script_1.js"></script>
 </body>
+
 </html>
