--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
 	    <li><a href="epreuve_oral.html" class="btn-CV">Epreuve Orale E5</a></li>
             <li><a href="veille_technologique.html" class="btn-CV">Veille Technologique</a></li>
             <li><a href="projet.html" class="btn-CV">Mes Projet</a></li>            
-	    <li><a href="CV.html" class="btn-CV">Mon CV Numérique</a></li>
+	    	<li><a href="cv.html" class="btn-CV">Mon CV Numérique</a></li>
         </ol>
     </div>
 </nav>
@@ -193,4 +193,5 @@
   <script src="script_1.js"></script>
 
 </footer>
+
 </html>
