--- a/projet.html
+++ b/projet.html
@@ -102,6 +102,19 @@
 		<br/>
 	</p>
 </section>
+
+<section id="cv">
+    <div class="texte">
+	<h4><b>Effectuer un CTF en environnement scolaire :</b> 
+	<br/><img src=".png" style="width: 15px; height: 15px;"></h4>
+	<p>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+	</p>
+</section>
+
 <h3> Projet en cours </h3>
 <section id="cv">
     <div class="texte">
@@ -134,3 +147,4 @@
 </footer>
 
 </html>
+
