--- a/projet.html
+++ b/projet.html
@@ -54,7 +54,7 @@
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Mes Projets</span></b></titel>
 <h2><b>Mes Projets</b></h2>
 <br/><br/>
-<h3> Prrojet passé </h3>
+<h3> Projet passé </h3>
 <section id="cv">
     <div class="texte">
 	<h4><b>Construction d'un Cabanon de Jardin :</b> 
@@ -147,4 +147,5 @@
 </footer>
 
 </html>
+
 
