--- a/epreuve_oral.html
+++ b/epreuve_oral.html
@@ -54,6 +54,10 @@
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Epreuve Orale E5</span></b></titel>
 <h2><b>Epreuve Orale E5</b></h2>
 <br/><br/>
+<object data="CV.pdf" type="application/pdf" width="100%" height="600px">
+  <p>Votre navigateur ne peut pas afficher le PDF. 
+     <a href="CV.pdf">Télécharger le PDF</a>.</p>
+</object>
 
 <footer>
 <br/>
@@ -74,3 +78,4 @@
 </footer>
 
 </html>
+
