--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ol>
 	    <li><a href="epreuve_oral.html" class="btn-CV">Epreuve Orale E5</a></li>
             <li><a href="veille_technologique.html" class="btn-CV">Veille Technologique</a></li>
-            <li><a href="projet.html" class="btn-CV">Mes Projet</a></li>            
+            <li><a href="projet.html" class="btn-CV">Mes Projets</a></li>            
 	    	<li><a href="cv.html" class="btn-CV">Mon CV Numérique</a></li>
         </ol>
     </div>
@@ -108,7 +108,7 @@
    <div class="texte">
 
 
-	<h4>Mon dernier diplome</h4> 
+	<h4>Mon dernier diplôme</h4> 
 	<p>
 		Baccalauréat 
 		<br/> Spécialité Mathématiques et Sciences de l’ingénieur
@@ -155,4 +155,5 @@
 </body>
 
 </html>
+
 
