--- a/a-propos.html
+++ b/a-propos.html
@@ -27,7 +27,7 @@
         <ol>
 	    <li><a href="epreuve_oral.html" class="btn-CV">Epreuve Orale E5</a></li>
             <li><a href="veille_technologique.html" class="btn-CV">Veille Technologique</a></li>
-            <li><a href="projet.html" class="btn-CV">Mes Projet</a></li>            
+            <li><a href="projet.html" class="btn-CV">Mes Projets</a></li>            
 	    	<li><a href="cv.html" class="btn-CV">Mon CV Numérique</a></li>
         </ol>
     </div>
@@ -74,3 +74,4 @@
 </footer>
 
 </html>
+
