--- a/a-propos.html
+++ b/a-propos.html
@@ -43,7 +43,7 @@
 <header>
 
 	
-	<h1> <b>A Propos</b> </h1>
+	<h1 class="titre"> <b>A Propos</b> </h1>
 
 	<p></p>
 	<p></p>
@@ -52,7 +52,7 @@
 <body>
 <br/>
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">A propos</span></b></titel>
-<h2><b>A propos</b></h2>
+<h2 class="titre"><b>A propos</b></h2>
 <br/><br/>
 
 <footer>
@@ -74,4 +74,5 @@
 </footer>
 
 </html>
+
 
