--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 <header>
 
 	
-	<h1> <b>Contact</b> </h1>
+	<h1 class="titre"> <b>Contact</b> </h1>
 
 	<p></p>
 	<p></p>
@@ -51,7 +51,7 @@
 <body>
 <br/>
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Contact</span></b></titel>
-<h2><b>Contact </b></h2>
+<h2 class="titre"><b>Contact </b></h2>
 <br/>
 <h4><b><u>Contact :</u></b></h4>
 <p>
@@ -86,4 +86,5 @@
 </footer>
 
 </html>
+
 
