--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
 <header>
 
 	
-	<h1> <b>Mon CV</b> </h1>
+	<h1 class="titre"> <b>Mon CV</b> </h1>
 
 	<p></p>
 	<p></p>
@@ -52,7 +52,7 @@
 <body>
 <br/>
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Mon CV</span></b></titel>
-<h2><b>Mon CV</b></h2>
+<h2 class="titre"><b>Mon CV</b></h2>
 <br/>
 <a href="CV.pdf" class="btn-CV-1">Télécharger le CV en PDF</a>
 <br/>
@@ -195,4 +195,5 @@
 </footer>
 
 </html>
+
 
