--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -42,7 +42,7 @@
 <header>
 
 	
-	<h1> <b>Mention legales</b> </h1>
+	<h1 class="titre"> <b>Mention legales</b> </h1>
 
 	<p></p>
 	<p></p>
@@ -52,7 +52,7 @@
 <body>
 <br/>
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Mentions légales</span></b></titel>
-<h2><b>Mentions légales</b></h2>
+<h2 class="titre"><b>Mentions légales</b></h2>
 <br/><br/>
 <pre>
 <span class="texte-grand"><u>Propriété intellectuelle :</u></span>
@@ -86,4 +86,5 @@
 </footer>
 
 </html>
+
 
