--- a/projet.html
+++ b/projet.html
@@ -43,7 +43,7 @@
 <header>
 
 	
-	<h1> <b>Mes Projets</b> </h1>
+	<h1 class="titre"> <b>Mes Projets</b> </h1>
 
 	<p></p>
 	<p></p>
@@ -52,9 +52,9 @@
 <body>
 <br/>
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Mes Projets</span></b></titel>
-<h2><b>Mes Projets</b></h2>
+<h2 class="titre"><b>Mes Projets</b></h2>
 <br/><br/>
-<h3> Projet passé </h3>
+<h3 class="titre"> Projet passé </h3>
 <section id="cv">
     <div class="texte">
 	<h4><b>Construction d'un Cabanon de Jardin :</b> 
@@ -115,7 +115,7 @@
 	</p>
 </section>
 
-<h3> Projet en cours </h3>
+<h3 class="titre"> Projet en cours </h3>
 <section id="cv">
     <div class="texte">
 	<h4><b>Démontage d'un vieux PC dans l but de le transformer en serveur :</b> 
@@ -147,6 +147,7 @@
 </footer>
 
 </html>
+
 
 
 
