--- a/veille_technologique.html
+++ b/veille_technologique.html
@@ -43,7 +43,7 @@
 <header>
 
 
-	<h1> <b>Veille Technologique</b> </h1>
+	<h1 class="titre"> <b>Veille Technologique</b> </h1>
 
 	<p></p>
 	<p></p>
@@ -52,7 +52,7 @@
 <body>
 <br/>
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Veille Technologique</span></b></titel>
-<h2><b>Veille Technologique</b></h2>
+<h2 class="titre"><b>Veille Technologique</b></h2>
 <br/>
 <section id="veille-technologique">
 
@@ -91,4 +91,5 @@
 </body>
 
 </html>
+
 
