--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	
 	
 	
-	<h1 class="titre"> <b>Accueil</b> </h1>
+	<h1> <b>Accueil</b> </h1>
 	
 	<p></p>
 	<p></p>
@@ -61,7 +61,7 @@
 
 <br/>
 <br/>
-<h3 class="titre"> Présentation </h3>
+<h3> Présentation </h3>
 <br/>
 <section id="presentation">
     <img src="photo-profil_1.jpg" alt="Photo de profil">
@@ -79,7 +79,7 @@
 <br/>
 <br/>
 
-<h3 class="titre"> Résumé de mon CV </h3>
+<h3> Résumé de mon CV </h3>
 <section id="cv">
 <h2><u>2 Dernières expériences :</u></h2>
     <div class="texte">
@@ -153,6 +153,7 @@
 	
 </body>
 </html>
+
 
 
 
