--- a/epreuve_oral.html
+++ b/epreuve_oral.html
@@ -53,7 +53,72 @@
 <br/>
 <titel><b>> <a href="index.html" class="btn-accueil">Accueil</a> > <span class="btn-nom-fixe">Epreuve Orale E5</span></b></titel>
 <h2><b>Epreuve Orale E5</b></h2>
-<br/><br/>
+<br/>
+<section id="cv">
+<h2><u>Présentation de l'épreuve</u></h2>
+    <div class="texte">
+	<h4>1. Objectif de l’épreuve</h4> 
+	<p>
+		<br/>Son but est d’évaluer les compétences professionnelles du candidat dans un contexte réel ou simulé de service informatique, sur la base de ses réalisations (projets, stages, travaux en atelier…). 
+			 Selon l’option (SISR ou SLAM), l’épreuve vise des blocs de compétences différents :
+		<br/> - Option SISR (Systèmes & Réseaux) : compétences en administration d’infrastructure.
+		<br/> - Option SLAM (Applications Métiers) : compétences en développement, maintenance applicative, gestion de bases de données 
+
+ 
+	<h4>2. Modalités de l’épreuve</h4> 
+	<p>
+		<br/>Voici comment est structurée l’épreuve :
+		<br/> - Forme : épreuve orale ou pratique + orale, selon l’option.
+		<br/> - Durée : selon plusieurs sources, l’interrogation dure 40 minutes.
+		<br/> - Coefficient : l’épreuve E5 a un coefficient 4 dans le BTS SIO. 
+		<br/> - Dossier : le candidat doit constituer un dossier professionnel (réalisations, livrables, documentation) qui sert de support à l’épreuve.
+		<br/> - Réalisations professionnelles : l’épreuve s’appuie sur deux réalisations professionnelles (par exemple des projets en stage ou réalisés en formation) que le candidat a menées.
+		<br/> - Environnement technologique (SISR) : l’infrastructure sur laquelle les projets sont réalisés doit respecter certaines contraintes technologiques définies dans le référentiel (par exemple, des serveurs, des services d’authentification, un SGBD, des solutions de sauvegarde, etc.). 
+		<br/> - Préparation du jury : la commission d’évaluation a un temps pour prendre connaissance du dossier du candidat avant l’oral.
+		<br/> - Expression de besoins : le jury choisit l’une des deux réalisations pour générer une “expression de besoins” que le candidat doit analyser et traiter pendant l’épreuve.
+
+		
+	<h4>3. Structure de l’oral</h4> 
+	<p>
+		<br/>L’oral de l’épreuve E5 comprend deux phases :
+		<br/>1. Présentation du parcours (environ 10 minutes)
+		<br/> - Le candidat présente son parcours de professionnalisation.
+		<br/> - Il met en évidence les réalisations professionnelles (projets, stages), explique comment il a acquis ses compétences et montre une réflexion sur son expérience.
+		<br/>2. Entretien / échange avec le jury (environ 30 minutes)
+		<br/> - Le jury interroge le candidat sur ses projets : décisions techniques, difficultés, choix de solutions.
+		<br/> - Le candidat doit justifier les compétences qu’il a mobilisées et démontrer sa capacité à analyser et à tirer du recul sur son travail.
+		<br/> - Il peut y avoir une mise en situation ou une question d’approfondissement sur des aspects techniques ou organisationnels.
+		
+	<h4>4. Critères d’évaluation</h4> 
+	<p>
+	    <b>Employé Polyvalent : CESU URSSAF</b>
+		<br/>04/2025
+		<br/>Entretiens du jardin et d’une cour extérieure d&#39;un particulier en situation de Handicap,
+		<br/>Responsable des activités de bricolage,
+		<br/>Création d&#39;une rampe d’accès handicapés.
+		<br/> 
+
+	<h4>5. Enjeux et bonnes pratiques pour le candidat</h4> 
+	<p>
+	    <b>Employé Polyvalent : CESU URSSAF</b>
+		<br/>04/2025
+		<br/>Entretiens du jardin et d’une cour extérieure d&#39;un particulier en situation de Handicap,
+		<br/>Responsable des activités de bricolage,
+		<br/>Création d&#39;une rampe d’accès handicapés.
+		<br/> 
+
+	<h4>6. Importance de l’épreuve</h4> 
+	<p>
+	    <b>Employé Polyvalent : CESU URSSAF</b>
+		<br/>04/2025
+		<br/>Entretiens du jardin et d’une cour extérieure d&#39;un particulier en situation de Handicap,
+		<br/>Responsable des activités de bricolage,
+		<br/>Création d&#39;une rampe d’accès handicapés.
+		<br/> 
+    </div>
+
+</section>
+<br/>
 <object data="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf" type="application/pdf" width="100%" height="600px">
   <p>Votre navigateur ne peut pas afficher le PDF. 
      <a href="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf">Télécharger le PDF</a>.</p>
@@ -78,6 +143,7 @@
 </footer>
 
 </html>
+
 
 
 
