--- a/epreuve_oral.html
+++ b/epreuve_oral.html
@@ -63,7 +63,7 @@
 			 Selon l’option (SISR ou SLAM), l’épreuve vise des blocs de compétences différents :
 		<br/> - Option SISR (Systèmes & Réseaux) : compétences en administration d’infrastructure.
 		<br/> - Option SLAM (Applications Métiers) : compétences en développement, maintenance applicative, gestion de bases de données 
-
+	</p>
  
 	<h4>2. Modalités de l’épreuve</h4> 
 	<p>
@@ -76,7 +76,7 @@
 		<br/> - Environnement technologique (SISR) : l’infrastructure sur laquelle les projets sont réalisés doit respecter certaines contraintes technologiques définies dans le référentiel (par exemple, des serveurs, des services d’authentification, un SGBD, des solutions de sauvegarde, etc.). 
 		<br/> - Préparation du jury : la commission d’évaluation a un temps pour prendre connaissance du dossier du candidat avant l’oral.
 		<br/> - Expression de besoins : le jury choisit l’une des deux réalisations pour générer une “expression de besoins” que le candidat doit analyser et traiter pendant l’épreuve.
-
+	</p>
 		
 	<h4>3. Structure de l’oral</h4> 
 	<p>
@@ -88,33 +88,37 @@
 		<br/> - Le jury interroge le candidat sur ses projets : décisions techniques, difficultés, choix de solutions.
 		<br/> - Le candidat doit justifier les compétences qu’il a mobilisées et démontrer sa capacité à analyser et à tirer du recul sur son travail.
 		<br/> - Il peut y avoir une mise en situation ou une question d’approfondissement sur des aspects techniques ou organisationnels.
+	</p>
 		
 	<h4>4. Critères d’évaluation</h4> 
 	<p>
-	    <b>Employé Polyvalent : CESU URSSAF</b>
-		<br/>04/2025
-		<br/>Entretiens du jardin et d’une cour extérieure d&#39;un particulier en situation de Handicap,
-		<br/>Responsable des activités de bricolage,
-		<br/>Création d&#39;une rampe d’accès handicapés.
-		<br/> 
-
+		<br/>Les critères d’évaluation sont directement issus du référentiel des compétences du BTS SIO :
+		<br/> - Pour l’option SISR, l’épreuve vise à évaluer :
+		<br/>  1. la conception d’une solution d’infrastructure réseau,
+		<br/>  2. l’installation, les tests et le déploiement de cette infrastructure,
+		<br/>  3. l’exploitation, le dépannage et la supervision de cette infrastructure.
+		<br/> - Pour l’option SLAM, l’évaluation porte sur :
+		<br/>  1. la conception et le développement d’une solution applicative,
+		<br/>  2. la maintenance corrective ou évolutive d’une application,
+		<br/>  3. la gestion des données (bases de données, modélisation, requêtes…).
+		<br/> - Par ailleurs, l’évaluation prend en compte des compétences transversales : l’auto-réflexion, la capacité de communication, la clarté de la présentation, la structuration de la pensée et la rigueur dans la justification des choix.
+	</p>
+		
 	<h4>5. Enjeux et bonnes pratiques pour le candidat</h4> 
 	<p>
-	    <b>Employé Polyvalent : CESU URSSAF</b>
-		<br/>04/2025
-		<br/>Entretiens du jardin et d’une cour extérieure d&#39;un particulier en situation de Handicap,
-		<br/>Responsable des activités de bricolage,
-		<br/>Création d&#39;une rampe d’accès handicapés.
-		<br/> 
-
+		<br/> - Valoriser son expérience : Il est crucial de bien choisir les projets (réalisations professionnelles) que l’on présente. Il vaut mieux privilégier des situations où l’on a joué un rôle actif, avec des responsabilités, des décisions techniques, des défis à résoudre.
+		<br/> - Documentation solide : Le dossier professionnel doit être bien organisé : fiches descriptives, diagrammes, rapports de test, documentation technique, captures d’écran, etc. Cela montre le sérieux et la rigueur.
+		<br/> - Réflexion personnelle : Ne pas juste décrire ce qu’on a fait : il faut analyser, expliquer les choix, ce que l’on a appris, ce qu’on ferait différemment, identifier ses axes d’amélioration.
+		<br/> - Préparation à l’oral : S’entraîner à présenter en 10 minutes, bien structurer son discours, savoir reformuler des questions, anticiper des questions techniques, être capable de défendre ses choix.
+		<br/> - Connaissance de l’environnement technologique (surtout en SISR) : Bien maîtriser l’infrastructure sur laquelle les projets ont été réalisés, connaître les serveurs, les services, les mécanismes de sécurité, les outils de supervision. Se renseigner sur l’annexe d’environnement technologique du référentiel pour être sûr d’être conforme.
+	</p>
+		
 	<h4>6. Importance de l’épreuve</h4> 
-	<p>
-	    <b>Employé Polyvalent : CESU URSSAF</b>
-		<br/>04/2025
-		<br/>Entretiens du jardin et d’une cour extérieure d&#39;un particulier en situation de Handicap,
-		<br/>Responsable des activités de bricolage,
-		<br/>Création d&#39;une rampe d’accès handicapés.
-		<br/> 
+		<p>
+		<br/> - Pondération importante : Avec un coefficient 4, l’épreuve E5 compte de manière significative dans la validation du BTS SIO.
+		<br/> - Professionnalisation : Elle valorise l’expérience réelle (stages, projets) et non seulement les connaissances théoriques — c’est un vrai moment “mise en valeur” du “parcours pro” du candidat.
+		<br/> - Compétences transversales : Elle ne mesure pas uniquement des compétences techniques, mais aussi des compétences de communication, de réflexion et d’analyse, ce qui est très pertinent pour le monde professionnel.
+	</p>
     </div>
 
 </section>
@@ -143,6 +147,7 @@
 </footer>
 
 </html>
+
 
 
 
