--- a/epreuve_oral.html
+++ b/epreuve_oral.html
@@ -123,10 +123,14 @@
 
 </section>
 <br/>
-<object data="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf" type="application/pdf" width="100%" height="600px">
-  <p>Votre navigateur ne peut pas afficher le PDF. 
-     <a href="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf">Télécharger le PDF</a>.</p>
-</object>
+	
+<section id="cv">
+	<h2><u>Présentation de l'épreuve</u></h2>
+	<object data="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf" type="application/pdf" width="100%" height="600px">
+		<p>Votre navigateur ne peut pas afficher le PDF. 
+			<a href="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf">Télécharger le PDF</a>.</p>
+	</object>
+</section>
 
 <footer>
 <br/>
@@ -147,6 +151,7 @@
 </footer>
 
 </html>
+
 
 
 
