--- a/epreuve_oral.html
+++ b/epreuve_oral.html
@@ -125,7 +125,7 @@
 <br/>
 	
 <section id="cv">
-	<h2><u>Présentation de l'épreuve</u></h2>
+	<h2><u>Tableau de synthèse des compétences :</u></h2>
 	<object data="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf" type="application/pdf" width="100%" height="600px">
 		<p>Votre navigateur ne peut pas afficher le PDF. 
 			<a href="BTS_SIO_2025-Annexe_8-1-Epreuve_E5-Tableau_de_synthèse.pdf">Télécharger le PDF</a>.</p>
@@ -151,6 +151,7 @@
 </footer>
 
 </html>
+
 
 
 
